// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> can render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Timeline
    onEditSkip={[Function]}
    onEditStage={[Function]}
    onInsertStage={[Function]}
    stages={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="timeline__main"
>
          <TimelineAddNew
                    onInsertStage={[Function]}
          />
</div>,
        <div
          className="timeline__control-bar"
>
          <Button
                    color=""
                    content=""
                    icon=""
                    iconPosition="right"
                    onClick={[Function]}
                    size="small"
          >
                    Save
          </Button>
</div>,
      ],
      "className": "timeline",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TimelineAddNew
              onInsertStage={[Function]}
/>,
            Array [],
          ],
          "className": "timeline__main",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "add-new_0",
            "nodeType": "function",
            "props": Object {
              "onInsertStage": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": <Button
            color=""
            content=""
            icon=""
            iconPosition="right"
            onClick={[Function]}
            size="small"
>
            Save
</Button>,
          "className": "timeline__control-bar",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Save",
            "color": "",
            "content": "",
            "icon": "",
            "iconPosition": "right",
            "onClick": [Function],
            "size": "small",
          },
          "ref": null,
          "rendered": "Save",
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="timeline__main"
>
            <TimelineAddNew
                        onInsertStage={[Function]}
            />
</div>,
          <div
            className="timeline__control-bar"
>
            <Button
                        color=""
                        content=""
                        icon=""
                        iconPosition="right"
                        onClick={[Function]}
                        size="small"
            >
                        Save
            </Button>
</div>,
        ],
        "className": "timeline",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TimelineAddNew
                onInsertStage={[Function]}
/>,
              Array [],
            ],
            "className": "timeline__main",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "add-new_0",
              "nodeType": "function",
              "props": Object {
                "onInsertStage": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": <Button
              color=""
              content=""
              icon=""
              iconPosition="right"
              onClick={[Function]}
              size="small"
>
              Save
</Button>,
            "className": "timeline__control-bar",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Save",
              "color": "",
              "content": "",
              "icon": "",
              "iconPosition": "right",
              "onClick": [Function],
              "size": "small",
            },
            "ref": null,
            "rendered": "Save",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Timeline /> renders stages 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Timeline
    onEditSkip={[Function]}
    onEditStage={[Function]}
    onInsertStage={[Function]}
    stages={
        Array [
            Object {
              "id": 1,
              "type": "NameGenerator",
            },
            Object {
              "id": 2,
              "type": "Sociogram",
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="timeline__main"
>
          <TimelineAddNew
                    onInsertStage={[Function]}
          />
          <TimelineStage
                    id={1}
                    onEditSkip={[Function]}
                    onEditStage={[Function]}
                    type="NameGenerator"
          />
          <TimelineAddNew
                    onInsertStage={[Function]}
          />
          <TimelineStage
                    id={2}
                    onEditSkip={[Function]}
                    onEditStage={[Function]}
                    type="Sociogram"
          />
          <TimelineAddNew
                    onInsertStage={[Function]}
          />
</div>,
        <div
          className="timeline__control-bar"
>
          <Button
                    color=""
                    content=""
                    icon=""
                    iconPosition="right"
                    onClick={[Function]}
                    size="small"
          >
                    Save
          </Button>
</div>,
      ],
      "className": "timeline",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TimelineAddNew
              onInsertStage={[Function]}
/>,
            Array [
              <TimelineStage
                id={1}
                onEditSkip={[Function]}
                onEditStage={[Function]}
                type="NameGenerator"
/>,
              <TimelineAddNew
                onInsertStage={[Function]}
/>,
              <TimelineStage
                id={2}
                onEditSkip={[Function]}
                onEditStage={[Function]}
                type="Sociogram"
/>,
              <TimelineAddNew
                onInsertStage={[Function]}
/>,
            ],
          ],
          "className": "timeline__main",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "add-new_0",
            "nodeType": "function",
            "props": Object {
              "onInsertStage": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "stage_1",
            "nodeType": "class",
            "props": Object {
              "id": 1,
              "onEditSkip": [Function],
              "onEditStage": [Function],
              "type": "NameGenerator",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "add-new_0",
            "nodeType": "function",
            "props": Object {
              "onInsertStage": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "stage_2",
            "nodeType": "class",
            "props": Object {
              "id": 2,
              "onEditSkip": [Function],
              "onEditStage": [Function],
              "type": "Sociogram",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "add-new_1",
            "nodeType": "function",
            "props": Object {
              "onInsertStage": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": <Button
            color=""
            content=""
            icon=""
            iconPosition="right"
            onClick={[Function]}
            size="small"
>
            Save
</Button>,
          "className": "timeline__control-bar",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": "Save",
            "color": "",
            "content": "",
            "icon": "",
            "iconPosition": "right",
            "onClick": [Function],
            "size": "small",
          },
          "ref": null,
          "rendered": "Save",
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="timeline__main"
>
            <TimelineAddNew
                        onInsertStage={[Function]}
            />
            <TimelineStage
                        id={1}
                        onEditSkip={[Function]}
                        onEditStage={[Function]}
                        type="NameGenerator"
            />
            <TimelineAddNew
                        onInsertStage={[Function]}
            />
            <TimelineStage
                        id={2}
                        onEditSkip={[Function]}
                        onEditStage={[Function]}
                        type="Sociogram"
            />
            <TimelineAddNew
                        onInsertStage={[Function]}
            />
</div>,
          <div
            className="timeline__control-bar"
>
            <Button
                        color=""
                        content=""
                        icon=""
                        iconPosition="right"
                        onClick={[Function]}
                        size="small"
            >
                        Save
            </Button>
</div>,
        ],
        "className": "timeline",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TimelineAddNew
                onInsertStage={[Function]}
/>,
              Array [
                <TimelineStage
                  id={1}
                  onEditSkip={[Function]}
                  onEditStage={[Function]}
                  type="NameGenerator"
/>,
                <TimelineAddNew
                  onInsertStage={[Function]}
/>,
                <TimelineStage
                  id={2}
                  onEditSkip={[Function]}
                  onEditStage={[Function]}
                  type="Sociogram"
/>,
                <TimelineAddNew
                  onInsertStage={[Function]}
/>,
              ],
            ],
            "className": "timeline__main",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "add-new_0",
              "nodeType": "function",
              "props": Object {
                "onInsertStage": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "stage_1",
              "nodeType": "class",
              "props": Object {
                "id": 1,
                "onEditSkip": [Function],
                "onEditStage": [Function],
                "type": "NameGenerator",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "add-new_0",
              "nodeType": "function",
              "props": Object {
                "onInsertStage": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "stage_2",
              "nodeType": "class",
              "props": Object {
                "id": 2,
                "onEditSkip": [Function],
                "onEditStage": [Function],
                "type": "Sociogram",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "add-new_1",
              "nodeType": "function",
              "props": Object {
                "onInsertStage": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": <Button
              color=""
              content=""
              icon=""
              iconPosition="right"
              onClick={[Function]}
              size="small"
>
              Save
</Button>,
            "className": "timeline__control-bar",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": "Save",
              "color": "",
              "content": "",
              "icon": "",
              "iconPosition": "right",
              "onClick": [Function],
              "size": "small",
            },
            "ref": null,
            "rendered": "Save",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
